[package]
name = "thelma"
version = "0.1.0"
edition = "2021"
description = "Timelock Heuristic Evaluation for Lightning Movement Analysis"
authors = ["Onyekachukwu Ejiofor Nweke nwekeejioforscheller@gmail.com"]

[dependencies]
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
rayon = "1.10.0"
serde_json = "1.0.140"
rand = "0.9.1"
